Fix spacing

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -42,3 +42,14 @@ h3 {
   margin-bottom: 0;
 }
 
+#logos {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+
+
+
+
+
